--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <title>Music Player v.1</title>
 
@@ -30,12 +33,13 @@
         </div>
     </div>
     <div class="player">
-        <i class="fas fa-step-backward"></i>
-        <i class="fas fa-play-circle"></i>
-        <i class="fas fa-pause-circle"></i>
-        <i class="fas fa-step-forward"></i>
+        <i class="fas fa-step-backward bt-setas"></i>
+        <i class="fas fa-play-circle bt-play"></i>
+        <i class="fas fa-pause-circle bt-pause"></i>
+        <i class="fas fa-step-forward bt-setas"></i>
     </div>
     <audio src="musicas/Jon Secada - Just Another Day.mp3"></audio>
+    <script src="script.js"></script>
 </body>
 
 </html>
