--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </div>
     </div>
     <div class="player">
-        <i class="fas fa-step-backward bt-setas"></i>
+        <i class="fas fa-step-backward bt-setas anterior"></i>
         <i class="fas fa-play-circle bt-play"></i>
         <i class="fas fa-pause-circle bt-pause"></i>
-        <i class="fas fa-step-forward bt-setas"></i>
+        <i class="fas fa-step-forward bt-setas proxima"></i>
     </div>
     <audio src="musicas/Jon Secada - Just Another Day.mp3"></audio>
     <script src="script.js"></script>
